--- a/Autosalone/.settings/org.eclipse.wst.common.component
+++ b/Autosalone/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Autosalone">
+        
+    <wb-module deploy-name="MN_Autosalone">
+                
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="Autosalone"/>
+                
         <property name="java-output-path" value="/Autosalone/target/classes"/>
+        <property name="context-root" value="MN_Autosalone"/>
+            
     </wb-module>
+    
 </project-modules>
